
20110320T1832Z <gchicares@sbcglobal.net> [654]

  rounding_rules.cpp
  rounding_rules.hpp
  rounding_view_editor.cpp
Reduce physical dependency by fixing 'build_type=so_test' erosion.

20110320T1914Z <gchicares@sbcglobal.net> [654]

  policy_document.cpp
  product_data.cpp
  product_data.hpp
  rounding_document.cpp
  rounding_rules.cpp
  rounding_rules.hpp
  stratified_charges.cpp
  stratified_charges.hpp
  tier_document.cpp
Reduce physical dependency by fixing 'build_type=so_test' erosion.
Inherited implementations of load() and save() are not available
across an msw dll boundary with declspec decorations due to local
instantiation of base class template xml_serializable<>.

20110320T2106Z <gchicares@sbcglobal.net> [654]

  main_cli.cpp
  mc_enum_types_aux.cpp
  mc_enum_types_aux.hpp
Reduce physical dependency by fixing 'build_type=so_test' erosion.

20110321T0024Z <gchicares@sbcglobal.net> [654]

  mc_enum_types_aux.cpp
  path_utility.cpp
Remove unnecessary declspec decorations.

20110321T0025Z <gchicares@sbcglobal.net> [655]

  objects.make
Make a casual workaround somewhat less bad.

20110321T0047Z <gchicares@sbcglobal.net> [655]

  input_harmonization.cpp
Permit "weird" columns when needed, with no password.

20110321T0609Z <gchicares@sbcglobal.net> [655]

  GNUmakefile
Augment 'build_type=so_test' testing.

20110321T0610Z <gchicares@sbcglobal.net> [655]

  workhorse.make
Remove obsolete commentary.

20110321T0711Z <gchicares@sbcglobal.net> [655]

  msw_common.make
Simplify: default linker order needn't be specified explicitly.

20110321T0716Z <gchicares@sbcglobal.net> [655]

  version.hpp
Designate release candidate.

20110323T1518Z <gchicares@sbcglobal.net> [655]

  license.cpp
Fix defect introduced 20110105T2122Z.

20110323T1521Z <gchicares@sbcglobal.net> [655]

  GNUmakefile
Guard against recurrence of defect introduced 20110105T2122Z.

20110323T1523Z <gchicares@sbcglobal.net> [655]

  version.hpp
Designate release candidate.
